--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -300,6 +300,7 @@ de:
       deleted: Das Team wurde erfolgreich gelöscht
       cannot_delete: Nur Admins können das Team löschen
       no_member: Sie sind nicht Mitglied dieses Teams
+      not_existing: "Es existiert kein Team mit der Id %{id}"
     teammembers:
       could_not_remove_last_teammember: Der letzte Benutzer eines Teams kann nicht entfernt werden
       could_not_remove_admin_from_private_team: Admins können nicht aus einem privaten Team gelöscht werden
