--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -302,6 +302,7 @@ fr:
       deleted: L'équipe a été supprimé.
       cannot_delete: Vous pouvez seulement supprimer une équipe si vous etes un admin.
       no_member: Vous n'êtes pas membre de cette équipe
+      not_existing: "Il n'y a pas d'équipe avec l'id %{id}"
     teammembers:
       could_not_remove_last_teammember: Il n’est pas possible de supprimer le dernier utilisateur de l'équipe
       could_not_remove_admin_from_private_team: Il n’est pas possible de supprimer un admin d'une équipe privée
