--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -215,6 +215,7 @@ en:
       last_login_from: Last login from
     api_users:
       api_users: Api Users
+      no_api_users: No Api Users
       username: Username
       description: Description
       valid_until: Valid until
