finished remove policy scopes, updated renew api user message, refs #43251

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -248,7 +248,7 @@ de:
         lock: "%{username} wurde gesperrt"
         unlock: "%{username} wurde entsperrt"
         token:
-          renew: "%{username} wurde erneuert"
+          renew: "%{username} wurde erneuert, neues Token: %{token}"
       members:
         added: "%{username} wurde erfolgreich hinzugefügt"
         removed: "%{username} wurde erfolgreich entfernt"
