--- a/config/locales/ch_be.yml
+++ b/config/locales/ch_be.yml
@@ -224,6 +224,29 @@ ch_be:
     description:
       private: Admins hei ke Zuegriff we si agwäut si
 
+  profile:
+    index:
+      title: "S Profil vom %{label}"
+    info:
+      info: Info
+      last_login_at: Letschts Login am
+      last_login_from: Letschts Login vo
+    api_users:
+      api_users: Api Benützer
+      no_api_users: Kei Api Benützer
+      username: Benutzernamä
+      description: Beschribig
+      enter_description: Gib e beschribig ii..
+      valid_until: Güutig bis
+      valid_for: Güutig für
+      last_login_at: Letschts Login am
+      last_login_from: Letschts Login vo
+      options:
+        one_min: Ei minutä
+        five_mins: Füf minutä
+        twelve_hours: Zwöuf Stung
+        infinite: Eewigs
+
   flashes:
     api:
       admin:
