--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -215,7 +215,7 @@ en:
       last_login_from: Last login from
     api_users:
       api_users: Api Users
-      no_api_users: No Api User exists
+      no_api_users: No api users
       username: Username
       description: Description
       enter_description: click to enter description..
