--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -121,6 +121,7 @@ en:
         title: List of all Cryptopus users
         username: Username
         name: Name
+        password_complexity: Password complexity
         ldap_uid: LDAP UID
         last_login_at: Last login at
         last_login_from: Last login from
@@ -361,9 +362,9 @@ en:
               taken: Filename is already taken
 
   password_strength:
-    weak: The password is weak
-    good: The password is good
-    strong: The password is strong!
+    weak: Weak
+    good: Good
+    strong: Strong
 
   #Pundit
   pundit:
