--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -434,9 +434,9 @@ de:
         other: "%{count} Sekunden"
 
   password_strength:
-    weak: Unsicher
-    good: Genügend
-    strong: Stark
+    weak: Das Passwort ist unsicher
+    good: Das Passwort genügt
+    strong: Das Passwort ist stark!
 
   #Pundit
   pundit:
