--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -436,13 +436,13 @@ fr:
         other: "%{count} secondes"
 
   password_strength:
-    weak: Faible
-    good: Bon
-    strong: Forte
+    weak: Le mot de passe est faible
+    good: Le mot de passe est bon
+    strong: Le mot de passe est forte!
     
   #Pundit
   pundit:
     default: Accès refusé
     team_policy:
       update?: Vous n'êtes pas membre de cette équipe
-      destroy?: Seul l'administrateur peut supprimer des équipes
+      destroy?: Seul l'administrateur peut supprimer des équipes 
