--- a/config/locales/ch_be.yml
+++ b/config/locales/ch_be.yml
@@ -109,6 +109,7 @@ ch_be:
     maintenance_tasks:
       index:
         title: Wartigsufgabe
+        unavailable: Keni Wartigsufgabe verfüegbar
         maintenance_task: Wartigsufgab
         run: Usfüehre
     settings:
