refactor account controller and locales

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -373,8 +373,8 @@ de:
         username: Benutzername
     errors:
       template:
-        body:
-        header:
+        body: ''
+        header: ''
       models:
         account:
           attributes:
