--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -248,7 +248,7 @@ ru:
       uploaded_size_to_high: "Файл слишком большой (макс. 10 МБ)"
       uploaded_filename_is_empty: "Файл должен иметь имя"
       uploaded_file_inexistent: "Файл не существует"
-    logins:
+    sessions:
       weak_password: "Для усиления безопасности смените пароль на более сложный."
       welcome: "Добро пожаловать в Cryptopus! Для начала вам нужно создать аккаунт. Пожалуйста, введите новый пароль."
       auth_failed: "Ошибка аутентификации! Введите правильное имя пользователя и пароль."
