--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -312,7 +312,7 @@ en:
       uploaded_size_to_high: The file is too big to upload. (max. 10MB)
       uploaded_filename_is_empty: The file has to be named
       uploaded_file_inexistent: File is inexistent
-    logins:
+    sessions:
       weak_password: To improve security you should change your login password to a more complex one.
       welcome: Welcome to Cryptopus, first you have to create a new account. Please enter a new password
       auth_failed: Authentication failed! Enter a correct username and password.
