--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -168,6 +168,7 @@ en:
       title: Logout
       message: Bye
       hint: Please clear your browser cache.
+      expired: You have been automatically logged out.
     newuser:
       title: Welcome to Cryptopus
       description: We created a new keypair for you. Enjoy Cryptopus.
